Add basic style.

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,10 @@
 
 <body>
     <header>
-        <h1>LEADERBOARD</h1>
+        <div class="title">
+            <h1>LEADERBOARD</h1>
+        </div>
+        
         <div class="content">
             <section class="board-section">
                 <article class="board-refresh-btn">
@@ -22,9 +25,9 @@
             </section>
 
             <section class="score-board">
-                <h2>Add your score</h2>
+                <h2> Add your score </h2>
                 <form action="#">
-                    <input type="text" placeholder="Your name">
+                    <input type="text" placeholder="Your name"><br><br>
                     <input type="text" placeholder="Your score">
                 </form>
                 <div class="add-score">
