Update style file

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
         <div class="title">
             <h1>LEADERBOARD</h1>
         </div>
-        
+
         <div class="content">
             <section class="board-section">
                 <article class="board-refresh-btn">
@@ -20,7 +20,13 @@
                     <button>Refresh</button>
                 </article>
                 <article class="board-table">
-
+                    <ul class="score">
+                        <li class="one"><a href="#">name: 100</a></li>
+                        <li class="two"><a href="#">name: 50</a></li>
+                        <li class="one"><a href="#">name: 150</a></li>
+                        <li class="two"><a href="#">name: 30</a></li>
+                        <li class="one"><a href="#">name: 300</a></li>
+                    </ul>
                 </article>
             </section>
 
