Update index.js file, and add changes to css and html file

--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,17 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Leaderboard</title>
+    <script src="https://kit.fontawesome.com/1bb5d15b47.js" crossorigin="anonymous"></script>
+    <title>LEADERBOARD</title>
 </head>
+
+<body>
+
+</body>
+
+</html>
 
 <body>
     <header>
@@ -21,7 +29,10 @@
                 </article>
                 <article class="board-table">
                     <ul class="listscore" id="score_list">
-
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
                     </ul>
                 </article>
             </section>
@@ -30,11 +41,12 @@
                 <h2> Add your score </h2>
                 <form action="#">
                     <input class="leaders-name" name="name" type="text" placeholder="Your name"><br><br>
-                    <input class="leaders-score" name="score" type="text" placeholder="Your score">
+                    <input class="leaders-score" name="score" type="number" placeholder="Your score"><br>
                 </form>
-                <div class="div-add-score">
-                    <button class="btn-submit" type="submit">Submit</button>
+                <div class="board-submit-btn ">
+                    <button class="btn-submit">Submit</button>
                 </div>
+
             </section>
         </div>
 
