--- a/src/index.html
+++ b/src/index.html
@@ -29,10 +29,10 @@
                 </article>
                 <article class="board-table">
                     <ul class="listscore" id="score_list">
-                        <li><a href="#"></a></li>
-                        <li><a href="#"></a></li>
-                        <li><a href="#"></a></li>
-                        <li><a href="#"></a></li>
+                        <li class="display-table-list"><a href="#"></a></li>
+                        <li class="display-table-list"><a href="#"></a></li>
+                        <li class="display-table-list"><a href="#"></a></li>
+                        <li class="display-table-list"><a href="#"></a></li>
                     </ul>
                 </article>
             </section>
@@ -41,11 +41,9 @@
                 <h2> Add your score </h2>
                 <form action="#">
                     <input class="leaders-name" name="name" type="text" placeholder="Your name"><br><br>
-                    <input class="leaders-score" name="score" type="number" placeholder="Your score"><br>
+                    <input class="leaders-score" name="score" type="number" placeholder="Your score"><br><br>
+                    <button type="submit" class="btn-submit">Submit</button>
                 </form>
-                <div class="board-submit-btn ">
-                    <button class="btn-submit">Submit</button>
-                </div>
 
             </section>
         </div>
